Footer overlapping resolved on lower resolution Fixes : #626

--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -55,6 +55,10 @@
     text-align: center;
 }
 
+#error-badge {
+  margin-bottom: 80px;
+}
+
 .navbar {
     height: 80px;
     background-color: white;
